Organize files into css/ js/ components/ and update HTML references

--- a/settings.html
+++ b/settings.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings - LabTrack</title>
-    <link rel="stylesheet" href="dashboard.css">
-    <link rel="stylesheet" href="settings.css">
+    <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="css/settings.css">
 </head>
 
 <body>
@@ -271,7 +271,7 @@
         </div>
     </main>
 
-    <script src="settings.js"></script>
+    <script src="js/settings.js"></script>
 </body>
 
 </html>
