--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - LabTrack</title>
-    <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="css/dashboard.css">
 </head>
 
 <body>
@@ -360,8 +360,8 @@
         </div>
     </main>
 
-    <script src="dashboard.js"></script>
-    <script src="settings.js"></script>
+    <script src="js/dashboard.js"></script>
+    <script src="js/settings.js"></script>
     <script>
         // Load theme and user settings on page load
         document.addEventListener('DOMContentLoaded', function () {
