--- a/users.html
+++ b/users.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Users - LabTrack</title>
-    <link rel="stylesheet" href="dashboard.css">
-    <link rel="stylesheet" href="users.css">
+    <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="css/users.css">
 </head>
 
 <body>
@@ -312,8 +312,8 @@
         </div>
     </div>
 
-    <script src="users.js"></script>
-    <script src="settings.js"></script>
+    <script src="js/users.js"></script>
+    <script src="js/settings.js"></script>
     <script>
         // Load theme and user settings on page load
         document.addEventListener('DOMContentLoaded', function () {
